# alx-system_engineering-devops

0x00-shell_basics/: 14-copy_html  file.txt
0x04-loops_conditions_and_parsing/: 0-RSA_public_key.pub  1-for_best_school  10-fizzbuzz  100-read_and_cut  101-tell_the_story_of_passwd  102-lets_parse_apache_logs  103-dig_the-data  2-while_best_school  3-until_best_school  4-if_9_say_hi  5-4_bad_luck_8_is_your_chance  6-superstitious_numbers  7-clock  8-for_ls  9-to_file_or_not_to_file
0x05-processes_and_signals/: 0-what-is-my-pid  1-list_your_processes  2-show_your_bash_pid  3-show_your_bash_pid_made_easy  4-to_infinity_and_beyond  5-dont_stop_me_now  7-highlander
0x06-regular_expressions/: 0-simply_match_school.rb  1-repetition_token_0.rb  2-repetition_token_1.rb  3-repetition_token_2.rb  4-repetition_token_3.rb  5-beginning_and_end.rb  6-phone_number.rb
0x07-networking_basics/: 5-is_the_host_on_the_network
0x09-web_infrastructure_design/: 0-simple_web_stack  1-distributed_web_infrastructure  2-secured_and_monitored_web_infrastructure  3-scale_up
0x0A-configuration_management/: 0-create_a_file.pp  1-install_a_package.pp  2-execute_a_command.pp  README.md
0x0B-ssh/: 0-use_a_private_key  1-create_ssh_key_pair  README.md
0x0C-web_server/: 1-install_nginx_web_server  2-setup_a_domain_name  3-redirection  4-not_found_page_404  README.md
0x0F-load_balancer/: 1-install_load_balancer  2-puppet_custom_http_response_header.pp
0x10-https_ssl/: 0-world_wide_web  (+2 more)
0x16-api_advanced/: 0-subs.py  1-top_ten.py  2-recurse.py  README.md  pyproject.toml
(+20 files in other folders)
