[tool.poetry]
name = "0x16-api-advanced"
version = "0.1.0"
description = ""
authors = ["Ademola Balogun"]
readme = "README.md"
packages = [{include = "0x16_api_advanced"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
